--- a/module1_task1/Makefile
+++ b/module1_task1/Makefile
@@ -1,10 +1,11 @@
+# Build the website
 build:
 	@hugo
-
+# Clean up the build directory
 clean:
 	rm -rf dist/*
 
-
+# Create a blog post
 post:
 	hugo new posts/$(POST_NAME).md
 	sed -i 's/title: .*/title: "$(POST_TITLE)"/' content/posts/$(POST_NAME).md
