--- a/module1_task2/config.toml
+++ b/module1_task2/config.toml
@@ -1,5 +1,6 @@
 baseURL = "http://example.org/"
 languageCode = "en-us"
 title = "My New Hugo Site"
+publishDir = "dist"
+
 theme = 'ananke'
-publishDir = 'dist'
