--- a/module1_task2/Makefile
+++ b/module1_task2/Makefile
@@ -1,24 +1,28 @@
 .PHONY: help
 
+# Display help message with list of targets
 help:
-@echo "Usage: make <target>"
-@echo ""
-@echo "Targets:"
-@echo " build Build the website"
-@echo " clean Clean up the build directory"
-@echo " post Create a blog post"
-@echo " help Show this help message"
-@echo ""
-@echo "For more information on a specific target, run:"
-@echo " make <target> --help"
-@echo ""
+	@echo "Usage: make <target>"
+	@echo ""
+	@echo "Targets:"
+	@echo "  build    Build the website"
+	@echo "  clean    Clean up the build directory"
+	@echo "  post     Create a blog post"
+	@echo "  help     Show this help message"
+	@echo ""
+	@echo "For more information on a specific target, run:"
+	@echo "  make <target> --help"
+	@echo ""
 
-build: ## Build the website
-@hugo
+# Build the website
+build: 
+	@hugo
 
-clean: ## Clean up the build directory
-rm -rf dist/*
+# Clean up the build directory
+clean: 
+	rm -rf dist/*
 
-post: ## Create a blog post
-hugo new posts/$(POST_NAME).md
-sed -i 's/title: .*/title: "$(POST_TITLE)"/' content/posts/$(POST_NAME).md
+# Create a new blog post
+post: 
+	hugo new posts/$(POST_NAME).md
+	sed -i 's/title: .*/title: "$(POST_TITLE)"/' content/posts/$(POST_NAME).md
